style.css
body {
    margin: 0;
    color: white;
    font-family: monospace;
    background-color: black;
}

#output {
    width: 100vw;
    height: 100vh;
    display: block;
}

.background {
    background-image: url("object_files/bg.jpg");
    background-size: cover;
    position: absolute;
    top: 0;
    z-index: -5;
    width: 100vw;
    height: 100vh;
    animation: blink 10s infinite ease-in-out;
}

hr {
    width: 80%;
}

.main {
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

.optionsContainer {
    display: block;
    z-index: 1;
    border-radius: 8px;
    background-color: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(15px);
    display: flex;
    flex-wrap: wrap;
    position: absolute;
    align-items: center;
    justify-content: center;
    width: 50vh;
    top: 5%;
    left: 3%;
    animation: slideInLeft 1s;
}

.creditsContainer {
    display: block;
    z-index: 1;
    border-radius: 8px;
    background-color: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(15px);
    display: flex;
    flex-wrap: wrap;
    position: absolute;
    align-items: center;
    justify-content: center;
    width: 50vh;
    top: 5%;
    right: 3%;
    animation: slideInRight 1s;
}

.invisible {
    display: none !important;
}

.break {
    flex-basis: 100%;
    height: 0;
}

.lightdirslider,
.scaleslider,
.speedslider {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 5%;
    margin-bottom: 5%;
}

.welcome {
    margin-bottom: 2%;
    margin-top: 5%;
}

.credits {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    margin-bottom: 5%;
    margin-top: 5%;
    padding-left: 3%;
    padding-right: 3%;
}

.instructions {
    text-align: left;
    margin-top: 5%;
    margin-bottom: 8%;
}

ul {
    text-align: center;
    list-style-type: none;
    padding: 0;
}

@keyframes blink {
    0% {
        opacity: 1;
    }

    50% {
        opacity: 0.2;
    }
    
    100% {
        opacity: 1;
    }
}

@keyframes slideInLeft {
    0% {
        transform: translateX(-200px);
    }

    100% {
        transform: translateX(0);
    }
}

@keyframes slideInRight {
    0% {
        transform: translateY(-200px);
    }

    100% {
        transform: translateX(0);
    }
}

kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
}

